@@ -4,6 +4,7 @@ Increased size of 'spass' buffer in affixtrain.cpp.
 Write information to a file, not stdout.
 Some signed/unsigned issues solved.
 Set minimum no. of lines in fractional training file to 1.
+Compute 'fraclines' in affixtrain.cpp as number of non-empty lines.
 
 Version 3.89 - 2018.06.28
 -------------------------
